Translate the rest of blip

--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -1,19 +1,364 @@
 {
+  " I am 12 years old or younger.": "",
+  " I am 18 years old or older.": "",
+  " I am between 13 and 17 years old. You'll need to have a parent or guardian agree to the terms below.": "",
+  "{{diff}} {{unit}} ago": "",
+  "{{diff}} {{unit}} ago_plural": "",
+  "{{field}} cannot be in the future!": "",
+  "{{field}} is invalid.": "",
+  "{{field}} is not a complete date.": "",
+  "{{field}} is required.": "",
+  "{{field}} must be at least {{min}} characters long.": "",
+  "{{field}} must be at most {{max}} characters long.": "",
+  "{{field}} must not contain white spaces.": "",
+  "{{month}}-{{day}}-{{year}}": "",
+  "{{numVisibleDays}} days in view": "",
+  "{{patientName}} does not have any data yet.": "",
+  "{{yearsAgo}} years ago": "",
+  "{{yrsAgo}} years old": "",
+  "1 week": "",
+  "1 year ago": "",
+  "1 year old": "",
+  "2 weeks": "",
+  "4 weeks": "",
+  "a few seconds ago": "",
+  "about": "",
   "Account": "Compte",
   "Account Settings": "Paramètres de compte",
+  "Allow uploading": "",
+  "An error occurred while logging in.": "",
+  "An error occurred while signing up.": "",
+  "An unknown error occurred": "",
+  "Anonymous user": "",
+  "Anything you would like to share?": "",
+  "Approx {{numVisibleDays}} days in view": "",
+  "April": "",
+  "Are you sure you want to cancel your invitation to {{email}}?": "",
+  "Are you sure you want to leave this person's Care Team? You will no longer be able to view their data.": "",
+  "Are you sure you want to remove this person? They will no longer be able to see or comment on your data.": "",
+  "August": "",
   "Back": "Retour",
+  "Basics": "",
+  "Beyond Type 1": "",
+  "Birthdate not known": "",
+  "birthday": "",
+  "Birthday": "",
+  "BIRTHDAY": "",
+  "Birthday is invalid.": "",
+  "Birthday is required.": "",
+  "Born this year": "",
+  "Cancel": "",
+  "Cannot create new chart with no data": "",
+  "CarbDM": "",
+  "CGM data will be synced from Dexcom": "",
+  "Change": "",
+  "Change your password": "",
+  "Check your email and follow the instructions to reset your password.": "",
+  "Check your email and follow the link there. (We need to confirm that you are really you.)": "",
+  "Children with Diabetes": "",
+  "Choose a diabetes nonprofit": "",
+  "Choose One": "",
+  "Choose which diabetes organization(s) to support": "",
+  "Click here to complete the \"Set up data storage\" step.": "",
+  "Clinic Manager": "",
+  "Clinic Name": "",
+  "Clinic Phone Number (optional)": "",
+  "Clinical Role": "",
+  "Clinician Account": "",
+  "Clinician Setup": "",
+  "Close": "",
+  "College Diabetes Network": "",
+  "Comment_submit": "",
+  "Confirm new password": "",
+  "confirm password": "",
   "Confirm password": "Confirmer le mot de passe",
+  "Continue": "",
+  "Copied!": "",
+  "Copy link": "",
+  "Create Clinician Account": "",
+  "Create Password": "",
+  "Create Personal Account": "",
+  "Create Tidepool Account": "",
+  "Creating Clinician Account...": "",
+  "Creating Personal Account...": "",
+  "Daily": "",
+  "Date of birth": "",
+  "Date of diagnosis": "",
+  "day": "",
+  "Day": "",
+  "day_timeago": "",
+  "days": "",
+  "days_timeago": "",
+  "ddd, MMM D, YYYY": "",
+  "December": "",
+  "Delete my account": "",
+  "Device settings": "",
+  "Diabetes Educator": "",
+  "Diabetes Youth Families (DYF)": "",
+  "DiabetesSisters": "",
+  "Diagnosed {{diagnosisDate}}": "",
+  "Diagnosed {{diagnosisDate}} as {{diagnosisType}}": "",
+  "Diagnosed as {{diagnosisType}}": "",
+  "diagnosis date": "",
+  "Diagnosis date": "",
+  "Diagnosis date not known": "",
+  "Disconnect": "",
+  "Do you want us to resend the email? Enter the address you used to signup below.": "",
+  "Donate my anonymized data": "",
+  "Donate my data?": "",
+  "Donate their anonymized data": "",
+  "Donate your data. Contribute to research.": "",
+  "Donating anonymized data...": "",
+  "Done": "",
+  "Download for Mac": "",
+  "Download for PC": "",
+  "Edit": "",
   "Email": "",
+  "email address": "",
+  "Email sent!": "",
+  "Endocrinologist": "",
+  "F_Friday": "",
+  "February": "",
   "Forgot your password?": "",
+  "Front Desk": "",
+  "full name": "",
   "Full name": "Nom complet",
+  "Full Name": "",
+  "Full name is required": "",
+  "Gestational": "",
+  "Get Started": "",
+  "Group": "",
+  "Hey, you're not verified yet.": "",
+  "Hide All": "",
+  "Hmm, {{field}} usually comes after birthday.": "",
+  "Hmm, diagnosis date usually comes after birthday": "",
+  "Hmm, this date doesn’t look right": "",
+  "hour": "",
+  "hour_timeago": "",
+  "hours": "",
+  "hours_timeago": "",
+  "How do you describe their diabetes?": "",
+  "How do you describe your diabetes?": "",
+  "I'm sure, remove me.": "",
+  "I'm sure, remove them": "",
+  "Ignore": "",
+  "Invalid email address.": "",
+  "Invite": "",
+  "Invite new member": "",
+  "IT/Technology": "",
+  "January": "",
+  "JDRF": "",
+  "Join the team!": "",
+  "Joining {{name}}'s team...": "",
+  "July": "",
+  "June": "",
+  "Keeping your data private and secure is important to us!": "",
+  "LADA (Type 1.5)": "",
   "Language": "Langue",
+  "Last data {{timeAgo}}": "",
+  "Learn More": "",
+  "Lines": "",
+  "Loading...": "",
   "Log in": "Connexion",
+  "Log in to view the invitation.": "",
   "Logged in as ": "Connecté en tant que ",
   "Logging in...": "Connexion...",
+  "Logging out...": "",
   "Login": "Connexion",
+  "Login expired - try signing out & in again": "",
   "Logout": "Déconnexion",
+  "Looks like you've already sent an invitation to that email.": "",
+  "Looks like your e-mail address has not been verified.": "",
+  "Lower target must be less than upper target.": "",
+  "M_Monday": "",
+  "M-D-YYYY": "",
+  "M/D/YYYY": "",
+  "March": "",
+  "May": "",
+  "Medical Assistant": "",
+  "minute": "",
+  "minute_timeago": "",
+  "minutes": "",
+  "minutes_timeago": "",
+  "MM/DD/YYYY": "",
   "MMM D, YYYY": "D MMM YYYY",
+  "month": "",
+  "Month": "",
+  "month_timeago": "",
+  "months": "",
+  "months_timeago": "",
+  "My Data Sources": "",
+  "NAME": "",
+  "New password": "",
+  "Nightscout Foundation": "",
+  "No": "",
+  "No data available - click Connect to enable": "",
+  "No data found": "",
+  "No, not now": "",
+  "Not set": "",
+  "November": "",
+  "Nurse/Nurse Practitioner": "",
+  "October": "",
+  "Other": "",
+  "password": "",
   "Password": "Mot de passe",
+  "Password is invalid.": "",
+  "Password is required.": "",
+  "Password must be at least {{minLength}} characters long.": "",
+  "Passwords don't match.": "",
+  "Patient List": "",
+  "Personal Account": "",
+  "Physician Assistant": "",
+  "Please complete these details.": "",
+  "Please enter your email address.": "",
+  "Please keep \"about\" text under {{maxLength}} characters": "",
+  "Please press Ctrl + C now": "",
+  "Post_submit": "",
+  "Pre-diabetes": "",
+  "Primary Care Physician": "",
+  "Print": "",
+  "Profile": "",
+  "Pump Settings": "",
+  "Range & Average": "",
+  "Ready!": "",
+  "Refresh": "",
   "Remember me": "Se souvenir de moi",
-  "Sign up": "Inscription"
+  "Remove": "",
+  "Remove People": "",
+  "Resend": "",
+  "Reset to default": "",
+  "Return to login": "",
+  "Sa_Saturday": "",
+  "Save": "",
+  "Save changes": "",
+  "Saving...": "",
+  "Search by Name": "",
+  "See all your diabetes data in one place. Finally.": "",
+  "See all your patients and all their device data in one place.": "",
+  "Select language...": "",
+  "Select Role...": "",
+  "Send reset link": "",
+  "Sending email...": "",
+  "Sending...": "",
+  "September": "",
+  "Set up data storage": "",
+  "Setting up...": "",
+  "Setup data storage": "",
+  "Share": "",
+  "Share a bit about this person.": "",
+  "Share a bit about yourself.": "",
+  "Share data": "",
+  "Show All": "",
+  "Sign up": "Inscription",
+  "Sign Up for Tidepool": "",
+  "Some entries are invalid.": "",
+  "Something went wrong sending an outgoing invitation to a care team.": "",
+  "Something went wrong trying to leave a care team.": "",
+  "Something went wrong trying to remove a member from a care team.": "",
+  "Something went wrong trying to request a password reset e-mail.": "",
+  "Something went wrong trying to resend verification e-mail.": "",
+  "Something went wrong trying to sign you up.": "",
+  "Something went wrong while accepting a received care team invitation.": "",
+  "Something went wrong while accepting the terms and conditions.": "",
+  "Something went wrong while cancelling an outgoing care team invitation.": "",
+  "Something went wrong while changing care team member permissions.": "",
+  "Something went wrong while confirming your sign-up.": "",
+  "Something went wrong while connecting the data source.": "",
+  "Something went wrong while disconnecting the data source.": "",
+  "Something went wrong while fetching a message thread.": "",
+  "Something went wrong while fetching data for the current patient.": "",
+  "Something went wrong while fetching patient preferences.": "",
+  "Something went wrong while fetching patient settings.": "",
+  "Something went wrong while fetching patient.": "",
+  "Something went wrong while fetching patients.": "",
+  "Something went wrong while fetching pending outgoing care team invitations.": "",
+  "Something went wrong while fetching received invitations to others' care teams.": "",
+  "Something went wrong while fetching the server time.  Falling back to local machine time": "",
+  "Something went wrong while fetching user.": "",
+  "Something went wrong while fetching your data donation preferences.": "",
+  "Something went wrong while fetching your data sources.": "",
+  "Something went wrong while generating your report.": "",
+  "Something went wrong while rejecting a received care team invitation.": "",
+  "Something went wrong while saving patient BG unit settings.": "",
+  "Something went wrong while saving patient preferences.": "",
+  "Something went wrong while saving patient profile.": "",
+  "Something went wrong while saving patient settings.": "",
+  "Something went wrong while setting up data storage.": "",
+  "Something went wrong while updating user account.": "",
+  "Something went wrong while updating your data donation preferences.": "",
+  "Something went wrong with your account authorization. Maybe try logging out and then logging back in? If you're still having issues then please contact support.": "",
+  "Sorry but it appears that you are offline. Tidepool requires that you be connected to the internet.": "",
+  "Sorry! It appears that this account hasn't been fully set up. Please notify the account owner that data storage may not be set up for this account.": "",
+  "Sorry! It appears that your account hasn't been fully set up.": "",
+  "Sorry! Something went wrong. It's our fault, not yours. We're going to go investigate. Please try again in a few moments.": "",
+  "Sorry! Something went wrong. It's our fault, not yours. We're going to investigate.": "",
+  "Su_Sunday": "",
+  "Success!": "",
+  "T1D Exchange": "",
+  "Th_Thursday": "",
+  "Thanks for contributing! Donate proceeds to a diabetes nonprofit.": "",
+  "That e-mail address already has an account.": "",
+  "The birthday specified does not match what is in our system. Please contact the clinic that created your account and ask them to update your birthday.": "",
+  "The diaTribe Foundation": "",
+  "These people can view {{patientName}}'s data": "",
+  "this field": "",
+  "This field is required.": "",
+  "This is for me, I have diabetes": "",
+  "This is for someone I care for who has diabetes": "",
+  "this year": "",
+  "Tidepool is stuck and isn't doing what you want it to do. We're sorry for the trouble.": "",
+  "Tidepool provides free, secure data storage for diabetes data.": "",
+  "Tidepool Uploader": "",
+  "Tidepool will attempt to send the details to our server.": "",
+  "Tidepool will share 10% of the proceeds with the diabetes organization(s) of your choice.": "",
+  "Tidepool's visualizations are only certified to work in the Chrome browser, and on Mac or PC.": "",
+  "To see your data, you’ll need the Tidepool Uploader": "",
+  "Trends": "",
+  "Tu_Tuesday": "",
+  "Type 1": "",
+  "Type 2": "",
+  "Type a comment here ...": "",
+  "Type a new note here ...": "",
+  "unknown": "",
+  "Upload": "",
+  "Upload data": "",
+  "Upper target must be greater than lower target.": "",
+  "Using Dexcom G5 Mobile on Android? See your data in Tidepool.": "",
+  "UTC time: ": "",
+  "Values": "",
+  "View": "",
+  "W_Wednesday": "",
+  "Waiting for confirmation": "",
+  "Waiting to import data": "",
+  "We are really sorry, but you need to be 13 or older in order to create an account and use Tidepool's Applications.": "",
+  "We couldn't change your password. You may have mistyped your email, or the reset link may have expired.": "",
+  "We just sent you an e-mail.": "",
+  "We just sent you an email. To verify we have the right email address, please click the link in the email to activate your account.": "",
+  "We use these details to identify you to your patients and to better support you.": "",
+  "We were unable to log this error to our server so could you please send us a note at <a style=\"text-decoration: underline;\" href=\"mailto:support@tidepool.org\">support@tidepool.org</a> and we'll try to see what broke?": "",
+  "week": "",
+  "week_timeago": "",
+  "Weekly": "",
+  "Welcome!": "",
+  "Which kind of account do you need?": "",
+  "Whoa, sorry about that. Looks like Tidepool needs to change the battery on its pump.": "",
+  "Whoops! Tidepool ran out of test strips...": "",
+  "Whoops! Tidepool's servers got clogged with glucose tabs.": "",
+  "Would you like to set up data storage for someone’s diabetes data?": "",
+  "Wrong username or password.": "",
+  "year": "",
+  "Year": "",
+  "year_timeago": "",
+  "years": "",
+  "years_timeago": "",
+  "Yes": "",
+  "Yes, let's set it up": "",
+  "You are a doctor, a clinic or other healthcare provider that wants to use Tidepool to help people in your care.": "",
+  "You have been invited to see {{name}}'s data!": "",
+  "You have not entered a password.": "",
+  "You have not specified a valid birthday!": "",
+  "You have not specified your birthday!": "",
+  "You want to manage your diabetes data. You are caring for or supporting someone with diabetes.": "",
+  "You've been invited to Tidepool.": "",
+  "Your password was changed successfully. You can now log in with your new password.": ""
 }
