Save language in local storage

--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -47,7 +47,7 @@
   "Birthday is invalid.": "",
   "Birthday is required.": "",
   "Born this year": "",
-  "Cancel": "",
+  "Cancel": "Annuler",
   "Cannot create new chart with no data": "",
   "CarbDM": "",
   "CGM data will be synced from Dexcom": "",
